feat: add some changes

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 SECRET_KEY=SOME_SECRET_KEY
 DEBUG=0
 DJANGO_SETTINGS_MODULE=path.to.settings
+PROJECT_NAME=zilol_mfy
+PORT=8000
 
 # Database settings
 DB_ENGINE=DB_ENGINE
