--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,20 +2,29 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
-  Deploy:
-
+  deploy:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Deploy
-      run: |
-        whoami
-        cd /var/www/zilol_mfy
-        git pull
-        docker-compose -f prod.yml up -d --build
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      
+      - name: Deploy
+        run: |
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} 'bash -s' << 'EOF'
+          whoami
+          cd /var/www/zilol_mfy
+          git pull
+          docker-compose -f prod.yml up -d --build
+          EOF
+
