--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Deploy
       run: |
-        root
+        whoami
         cd /var/www/zilol_mfy
         git pull
         docker-compose -f prod.yml up -d --build
