--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Deploy
         run: |
-          mkdir -p /var/www/zilol_mfy/backends
+          sudo mkdir -p /var/www/zilol_mfy
           cd /var/www/zilol_mfy/backends || exit
           git clone https://github.com/yourusername/yourproject.git .
           docker-compose -f prod.yml up -d --build
