--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,6 @@ jobs:
 
       - name: Deploy
         run: |
-          sudo mkdir -p /var/www/zilol_mfy
           cd /var/www/zilol_mfy || exit
-          git clone https://github.com/yourusername/yourproject.git .
+          sudo git clone https://github.com/yourusername/yourproject.git .
           docker-compose -f prod.yml up -d --build
