--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,7 +5,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+env:
+  SSH_HOST: ${{ secrets.SERVER_IP }}
+  SSH_USER: ${{ secrets.SERVER_USERNAME }}
+  SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,7 +19,7 @@ jobs:
 
       - name: Deploy
         run: |
-          sudo mkdir -p /var/www/zilol_mfy
-          cd /var/www/zilol_mfy || exit
+          sudo mkdir -p /var/www/backends/zilol_mfy
+          cd /var/www/backends/zilol_mfy || exit
           sudo git clone https://github.com/yourusername/yourproject.git .
           docker-compose -f prod.yml up -d --build
