--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,5 +21,5 @@ jobs:
         run: |
           sudo mkdir -p /var/www/backends/zilol_mfy
           cd /var/www/backends/zilol_mfy || exit
-          sudo git clone https://github.com/yourusername/yourproject.git .
+          sudo https://github.com/abduraximov/zilol_mfy.git .
           docker-compose -f prod.yml up -d --build
