--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Deploy
       run: |
-        whoami
-        cd /var/www/zilol_mfy
-        git pull
-        docker-compose -f prod.yml up -d --build
+        whoami &&
+        cd /var/www/zilol_mfy &&
+        sudo git pull &&
+        sudo docker-compose -f prod.yml up -d --build
