--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,21 +1,16 @@
-name: Django CI
-
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - main
+  workflow_dispatch:
 jobs:
-  Deploy:
-
+  run_pull:
+    name: run pull
     runs-on: self-hosted
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Deploy
+    - name: connect and pull
+      working-directory: /var/www/zilol_mfy
       run: |
-        whoami
-        cd /var/www/zilol_mfy
-        sudo git pull
-        sudo docker-compose -f prod.yml up -d --build
+          cd /var/www/zilol_mfy &&
+          git checkout main &&
+          git pull && docker-compose -f prod.yml up --build -d
