--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -4,12 +4,11 @@ on:
       - main
   workflow_dispatch:
 jobs:
-  run_pull:
-    name: run pull
+  Deploy:
     runs-on: self-hosted
     steps:
-    - name: connect and pull
-      working-directory: /var/www/zilol_mfy
+    - uses: actions/checkout@v3
+    - name: Deploy
       run: |
           whoami
           cd /var/www/zilol_mfy
