feat: add volume to postgresql

--- a/prod.yml
+++ b/prod.yml
@@ -38,7 +38,8 @@ services:
       - POSTGRES_HOST=${DB_HOST}
       - POSTGRES_PORT=${DB_PORT}
     restart: always
-
+    ports:
+      - "${DB_PORT}:${DB_PORT}"
 
   redis:
     container_name: ${PROJECT_NAME}_redis
